--- a/src/less/app.less
+++ b/src/less/app.less
@@ -2,8 +2,9 @@
 // Note: Master file for styles
 
 
-
+@import 'normalize';
 @import 'variables';
+@import 'scaffolding';
 
 @import 'icons';
-
+@import 'movie';
