--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,6 +1,20 @@
 // File: variables.less
-// Note: Bootstrap variable overrides and custom variables
 
 
 
 
+// -------------------------
+// Typography
+// -------------------------
+
+
+@font-family-base:        @font-family-sans-serif;
+@font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
+@font-family-sans-serif:  'Roboto','Helvetica Neue', Helvetica, Arial, sans-serif;
+@font-family-serif:       Georgia, "Times New Roman", Times, serif;
+
+@font-size-root:          10px;
+
+@font-size-base:          1.4rem;
+@font-size-large:         1.8rem;
+@font-size-small:         1.2rem;
