--- a/src/less/movie.less
+++ b/src/less/movie.less
@@ -7,12 +7,19 @@
 
 
 
-
 .movie {
   overflow: hidden;
-
+  position: relative;
 }
 
+.scene {
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  visibility: hidden;
+}
 
 
 
