--- a/src/less/movie.less
+++ b/src/less/movie.less
@@ -12,13 +12,26 @@
   position: relative;
 }
 
+.movie__title {
+  color: #fff;
+  position: absolute;
+  text-align: center;
+  text-transform: uppercase;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+}
+
+
+
 .scene {
   bottom: 0;
+  display: none;
   left: 0;
   position: absolute;
   right: 0;
   top: 0;
-  visibility: hidden;
+  //visibility: hidden;
 }
 
 
