--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -7,19 +7,15 @@
 
 
 html {
-  box-sizing: border-box;
   font-size: @font-size-root;
   overflow-x: hidden;
   -webkit-tap-highlight-color: rgba(0,0,0,0);
+}
 
-  /*@media (min-width: @screen-lg-min) {
-    font-size: 16px;
-  }*/
-
-  /*@media (min-width: 1600px) {
-    font-size: 16px;
-  }*/
-
+body {
+  background-color: #000;
+  box-sizing: border-box;
+  min-height: 100vh;
 }
 
 *,
