--- a/src/less/movie.less
+++ b/src/less/movie.less
@@ -12,14 +12,26 @@
   position: relative;
 }
 
-.movie__title {
-  color: #fff;
+.movie__intro {
   position: absolute;
   text-align: center;
-  text-transform: uppercase;
+  
   top: 50%;
   transform: translateY(-50%);
   width: 100%;
+}
+
+.movie__intro__title {
+  color: #fff;
+  opacity: 0;
+  text-transform: uppercase;
+}
+
+.movie__intro__loader {
+  color: #fff;
+  font-size: 1.2rem;
+  letter-spacing: 2px;
+  opacity: 0;
 }
 
 
