--- a/src/less/movie.less
+++ b/src/less/movie.less
@@ -8,6 +8,7 @@
 
 
 .movie {
+  min-height: 100vh;
   overflow: hidden;
   position: relative;
 }
@@ -23,18 +24,17 @@
 
 .movie__intro__title {
   color: #fff;
+  letter-spacing: 1px;
   opacity: 0;
   text-transform: uppercase;
 }
 
 .movie__intro__loader {
-  color: #fff;
+  color: #666;
   font-size: 1.2rem;
   letter-spacing: 2px;
   opacity: 0;
 }
-
-
 
 .scene {
   bottom: 0;
