Craig - click to play audio

--- a/src/less/movie.less
+++ b/src/less/movie.less
@@ -14,9 +14,9 @@
 }
 
 .movie__intro {
+  cursor: pointer;
   position: absolute;
   text-align: center;
-  
   top: 50%;
   transform: translateY(-50%);
   width: 100%;
